feat: detect and reconcile redundant key changes
- Add StaffElementRun to unify run-based iteration shared by lyrics and staff elements
- Track inherited key propagation and stranded key changes across lines, clipboard fragments, and MusicXML round-trips
- Reconcile accidentals and key changes when a key change becomes redundant after edits, paste, or line deletion
- Add regression tests and a MusicXML fixture covering stranded/redundant key changes

Closes #797